# docs/openapi.json
@@ -878,7 +878,7 @@
         ]
       }
     },
-    "/v1/book_pages/": {
+    "/v1/book_pages": {
       "get": {
         "description": "Get book pages in a book.",
         "operationId": "get-book-pages-v1",
@@ -1189,7 +1189,7 @@
         ]
       }
     },
-    "/v1/books/": {
+    "/v1/books": {
       "get": {
         "description": "Get a list of books.",
         "operationId": "get-books-v1",
@@ -1457,7 +1457,7 @@
         ]
       }
     },
-    "/v1/pets/": {
+    "/v1/pets": {
       "get": {
         "description": "Get available pets.",
         "operationId": "get-availble-pets-v1",
@@ -1534,7 +1534,7 @@
         ]
       }
     },
-    "/v1/reviews/": {
+    "/v1/reviews": {
       "get": {
         "description": "Get all reviews from database.",
         "operationId": "get-reviews-v1",
